refactor: replace get(0) with getFirst() for improved error handling in SnippetService